@@ -54,7 +54,7 @@ configure med power pd source pse priority high value 5000
 configure ports eth0 med power pd source pse priority high value 5000
 configure dot3 power pse supported enabled paircontrol powerpairs spare class class-3
 configure ports eth0 dot3 power pse supported enabled paircontrol powerpairs spare class class-3
-configure dot3 power pd supported enabled powerpairs spare class class-3 type 1 source pse priority low requested 10000 allocated 15000
+configure dot3 power pd supported enabled class class-3 type 1 source pse priority low requested 10000 allocated 15000
 
 # A convenient way to "test" lldpcli and liblldpctl is to load those commands in lldpcli with valgrind:
 #  libtool execute valgrind --suppressions=../src/client/lldpcli.supp --leak-check=full src/client/lldpcli -c ../tests/lldpcli.conf
